<resources>
    <string name="app_name">Exercise_Sqlite</string>
    <string name="action_settings">Settings</string>
    <string name="Daftar_kontak"> Daftar Kontak</string>

    //ALL PAGE
    <string name="TambahData"> Tambah Data</string>
    <string name="Nama">Nama</string>
    <string name="NoHP">Nomor Telepon</string>
    <string name="Email">Email</string>
    <string name="Alamat">Alamat</string>
    <string name="Telepon">Telepon</string>
    <string name="UpdateData">Update Data</string>
    <string name="Profil">Profil</string>
    <string name="Masukan_Nama">Masukkan Nama</string>
    <string name="MasukanEmail">Masukkan Email</string>
    <string name="MasukanTlpn">Masukan Nomor Telepon</string>
    <string name="Masukan_alamat">Masukkan Alamat</string>
</resources>
